--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "description": "",
   "devDependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.0",
     "gulp-livescript": "^3.0.0",
     "gulp-load-plugins": "^1.2.0",
+    "gulp-replace": "^0.5.4",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.3.0",
