--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "root-cz-fixer-1",
-  "version": "0.0.1",
+  "name": "root-cz-fixer",
+  "version": "0.0.3",
   "description": "",
   "devDependencies": {
     "del": "^2.2.0",
